[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "meowpkg"
dynamic = ["version"]
dependencies = [
        "cowsay",
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
description = "Simple python package"

[project.scripts]
dragon-cowsay = "meowpkg.dragon:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "meowpkg.VERSION"}
